--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd backend && node server.js",
-    "client": "cd Vite-project && npm run dev"
+    "client": "cd Vite-project && npm run dev",
+     "build": "vite build"
   },
   
   "devDependencies": {
