--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,21 @@
 {
     "version": 2,
-    
+    "builds": [
+      {
+        "src": "backend/server.js",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["backend/**"]
+        }
+      },
+      {
+        "src": "vite-project/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "vite-project/build"
+        }
+      }
+    ],
     "routes": [
       {
         "src": "/api/(.*)",
