--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,6 @@
-{"versionE:2,
+{"version":2,
 "builds": [
-{ "src": "".js", "use": "@vercel/node" }
+{ "src": "*.js", "use": "@vercel/node" }
 ],
 "routes": [
 {
