--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,15 @@
-{"version": 2,
-"builds": [{ "src": "./server.js", "use":
-"avercel/nade" }],
-"routes": [{ "src": "/( .* )", "dest": "/" }]
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
